# AmbiqAIToolbox

./: README.md
VSCode/: launch.json  settings.json  tasks.json
skeleton/: .clang-format  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
skeleton/.github/workflows/: tests.yml
skeleton/evb/src/: hello.c
skeleton/python/: hello.py  version.py
skeleton/python/change_me/: __init__.py
skeleton/tests/: hello_test.py
